Review Request 3909 -File compression working now... but still need to make this happen in a web worker to avoid UI locking issue during compression -Fixed UI choosing wrong report to display in View Report for jobs page -Fixed QA not showing service errors properly

--- a/le-ui/projects/leadprioritization/assets/styles/main.scss
+++ b/le-ui/projects/leadprioritization/assets/styles/main.scss
@@ -648,6 +648,7 @@ Create Model: Validate Import View
     font-size: 1.35em;
     font-weight: bold;
     margin-bottom: 10px;
+    height: 2.4em;
   }
   h3 {
     text-align: center;
